# cia402-testdevice

./: .cproject  .gitignore  .mxproject  .project  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json  lely-can-tester.ioc  lely-can-tester.launch  lely-cia402-tester.ioc
Core/Inc/: main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
Core/Src/: main.c  sdev.c  stm32g4xx_hal_msp.c  stm32g4xx_hal_timebase_tim.c  stm32g4xx_it.c  time.c
Core/Src/bsp/inc/: ring_buffer.h
Core/Src/bsp/src/: can.c  ring_buffer.c
Core/Src/cia402/: callbacks.c  callbacks.h
Core/Src/libnosys/src/: exit.c  nosys.c  nosys.h  write.c
Core/Src/ui/: ui.c  ui.h  vars.h
Core/bsp/: can.c  can.h  ring_buffer.h
Drivers/CMSIS/Device/ST/STM32G4xx/Include/: stm32g4xx.h
Drivers/LCD/: lcd.c  lcd.h
Libraries/Include/cia_402/: cia402_statemachine.h  co_callbacks.h  co_init.h  profile_position_mode.h
Libraries/Include/profile_generators/: trapezoidal_ramp.h
Libraries/Include/ui/: ui.h
Libraries/Source/cia_402/: cia402_statemachine.c  co_callbacks.c  co_init.c  profile_controller.c
Libraries/Source/profile_generators/: trapezoidal_ramp.c
Libraries/Source/ui/: ui.c
cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
doc/: CANOpen.md
